--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,12 +5,11 @@
     font-family: 'Belleza', sans-serif;
 }
 
-/* Pagina inicio */
+/* Pagina index */
 
 .h_menu{
-    background-color: rgb(247, 225, 229);
+    background-color: #02a592;
     list-style-type: none;
-    color: black;
     padding: 10px;
     margin: 10px;
     display: flex;
@@ -18,7 +17,7 @@
     flex-wrap: wrap;
     justify-content: flex-end;
     align-items: flex-start;
-  
+
 }
 
 .h_menu li{
@@ -29,30 +28,128 @@
     text-decoration: none;
     display: block;
     padding: 5px;
-    
+    color: black;
 }
 
-.h_logo{
+.h_menu li a:hover{
+ color: white;
+}
 
-    text-align: top;
+.h_menu img{
+ width: 40px;
+ height: 50px;
+ position: relative;
+}
+
+.h_principal_banner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.h_principal_banner img{
+    
     padding: 10px;
     margin: 10px;
-    
+    opacity: 0.8;
+    width: 100%;
+    height: 300px;
+
 }
 
-img{
-    padding: 10px;
-    margin: 10px;
-    display: block;
-    width: 1300px;
-    height: 350px;
-    opacity: 0.6;
-}
-
-.i_main_parrafo{
+/* Pagina index main*/
+.m_parrafo{
     margin: 30px;
     text-align: center;
     display: block;
-    background-color: rgb(247, 225, 229) ;
+    background-color: #b9f9ef;
+}
+
+.colecciones{
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    padding: 10px;
+    background-color:  #b9f9ef;
+    }
+
+.m_tipo_candles{
+    display: grid;
+    grid-template-columns: repeat(3,auto);
+    gap: 10px;
+    grid-gap: 10px;
+}
+
+.m_tipo_candles> div{
+    background-color:#d3f4ed;
+}
+
+.m_tipo_candles div:hover {
+    border: 0.5px solid  rgb(5, 57, 87);
+}
+
+.m_tipo_candles h3{
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-decoration: underline;
+}
+
+.m_tipo_candles p{
+    padding: 3px;
+    margin: 3px;
+    text-align: center;
+}
+
+.m_tipo_candles img{
+    width: 70%;
+}
+
+/* Pagina index footer*/
+ 
+.information{
+    display: flex;
+    flex-direction: row;
+    margin: 20px;
+    padding: 20px;
+    justify-content: flex-end;
+
+}
+
+.information> div{
+    padding: 5px;
+    width: 50px;
+    position: sticky; 
+}
+
+.information img{
+    width: 40px;
+}
+.f_image img{
+    background-image: ("./imagenes/banner footer.png");
+    height: 100%;
+
+}
+
+/* Pagina contacto */
+
+main h1{
+    text-align: center;
+    padding: 20px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+.btn{
+    margin: 15px;
+}
+
+/* Pagina nosotros */
+
+
+.video {
+    padding: 20px;
+    margin: 30px;
+    text-align: center;    
 }
 
