--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,17 +35,18 @@
  color: white;
 }
 
+.h_principal_banner{
+    background-position: center;
+    width: 100%;
+    height: 300px;
+
+}
+
 .h_menu img{
  width: 40px;
  height: 50px;
  position: relative;
-}
-
-.h_principal_banner{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+} 
 
 .h_principal_banner img{
     
@@ -95,14 +96,17 @@
     text-decoration: underline;
 }
 
+.m_tipo_candles img{
+   width: 70%;
+   padding-bottom: 10px;
+   padding-left: 120px;
+   justify-content: center;
+} 
+
 .m_tipo_candles p{
     padding: 3px;
     margin: 3px;
     text-align: center;
-}
-
-.m_tipo_candles img{
-    width: 70%;
 }
 
 /* Pagina index footer*/
@@ -129,6 +133,11 @@
     background-image: ("./imagenes/banner footer.png");
     height: 100%;
 
+}
+
+.foot img{
+    width: 100%;
+    height: 200px;
 }
 
 /* Pagina contacto */
