--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,7 @@
-$colorazul: #02a592;
-$colorblack: rgb(7, 7, 7);
+$colordarkblue: #02a592;
+$colorlightblue: #b9f9ef;
+$colorblack: black;
+$colorwhite: white;
+$colorbeige:  rgb(243, 242, 240) ;
+$aligncenter: center;
+
