--- a/css/main.css
+++ b/css/main.css
@@ -17,20 +17,19 @@
   justify-content: flex-end;
   align-items: flex-start;
 }
-
 .h_menu li {
   display: inline-block;
 }
-
 .h_menu li a {
   text-decoration: none;
   display: block;
   padding: 5px;
-  color: rgb(7, 7, 7);
+  color: black;
 }
-
-.h_menu li a:hover {
-  color: white;
+.h_menu img {
+  width: 40px;
+  height: 50px;
+  position: relative;
 }
 
 .h_principal_banner {
@@ -39,13 +38,9 @@
   height: 300px;
 }
 
-.h_menu img {
-  width: 40px;
-  height: 50px;
-  position: relative;
-}
-
 .h_principal_banner img {
+  padding: 10px;
+  margin: 10px;
   padding: 10px;
   margin: 10px;
   opacity: 0.8;
@@ -54,50 +49,25 @@
 }
 
 /* Pagina index main*/
-.m_parrafo {
+.carousel {
   margin: 30px;
   text-align: center;
   display: block;
   background-color: #b9f9ef;
 }
-
-.colecciones {
-  text-align: center;
-  margin-top: 100px;
-  margin-bottom: 100px;
-  padding: 10px;
-  background-color: #b9f9ef;
-}
-
-.m_tipo_candles {
-  display: grid;
-  grid-template-columns: repeat(3, auto);
-  gap: 10px;
-  grid-gap: 10px;
-}
-
-.m_tipo_candles > div {
-  background-color: #d3f4ed;
-}
-.m_tipo_candles > div:hover {
-  border: 0.5px solid rgb(5, 57, 87);
-}
-
-.m_tipo_candles h3 {
+.carousel h3 {
   text-align: center;
   margin-top: 30px;
   margin-bottom: 30px;
   text-decoration: underline;
 }
-
-.m_tipo_candles img {
-  width: 70%;
+.carousel img {
+  width: 40%;
   padding-bottom: 10px;
   padding-left: 120px;
   justify-content: center;
 }
-
-.m_tipo_candles p {
+.carousel p {
   padding: 3px;
   margin: 3px;
   text-align: center;
@@ -123,23 +93,16 @@
   padding: 20px;
   justify-content: flex-end;
 }
-
-.information > div {
-  padding: 5px;
-  width: 50px;
-  position: sticky;
-}
-
 .information img {
+  width: 20px;
+  padding: 5px;
+  width: 20px;
+  position: relative;
   width: 40px;
 }
 
-.f_image img {
-  background-image: "./imagenes/banner footer.png";
-  height: 100%;
-}
-
 .foot img {
+  background-image: "./imagenes/banner footer.png";
   background-position: center;
   width: 100%;
   height: 200px;
@@ -162,6 +125,22 @@ main h1 {
   padding: 20px;
   margin: 30px;
   text-align: center;
+}
+
+/*Blog*/
+main h3 {
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
+}
+
+/*tienda*/
+.tienda_title {
+  text-align: center;
+}
+.tienda_title h2 {
+  padding: 10px;
+  margin: 10px;
 }
 
 @media screen and (min-width: 768px) {
