--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -148,11 +148,27 @@ main{
 }
 
 /*tienda*/
+
 .tienda_title{
     text-align: center;
+    @include pad_marg;
+
     h2{
         @include pad_marg;
     }
+}
+
+.productos-6{
+    .btn{
+        background-color: $colordarkblue;
+    }
+    .card-img{
+        height: 80%;
+        width: 80%;
+        margin-left: 30px;
+
+    }
+
 }
 
 
