--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -148,6 +148,25 @@ main h1{
 }
 
 
+.video {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 50%;
+
+    }
+    
+
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 80%;
+}
+
 /*Blog*/
 
 .carousel-inner{
