--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,23 @@ main h1 {
   text-decoration-color: aqua;
 }
 
+.video {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 50%;
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 80%;
+}
+
 /*Blog*/
 .carousel-inner img {
   width: 60%;
