--- a/scss/main.css
+++ b/scss/main.css
@@ -2,8 +2,8 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  font-family: "Belleza", sans-serif;
+          box-sizing: border-box;
+  font-family: 'Belleza', sans-serif;
 }
 
 /* Pagina index */
@@ -17,16 +17,16 @@
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .h_menu li {
@@ -85,8 +85,8 @@
   padding-bottom: 10px;
   padding-left: 120px;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .carousel p {
@@ -101,15 +101,15 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 1%;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .img_tipos {
@@ -123,13 +123,13 @@
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   margin: 20px;
   padding: 20px;
   -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .information img {
@@ -168,7 +168,7 @@ main h1 {
   background-color: #f3f2f0;
   text-decoration: underline;
   -webkit-text-decoration-color: aqua;
-  text-decoration-color: aqua;
+          text-decoration-color: aqua;
 }
 
 .video {
@@ -192,7 +192,7 @@ main h1 {
 .carousel-inner img {
   width: 60%;
   -ms-flex-line-pack: center;
-  align-content: center;
+      align-content: center;
   padding-bottom: 10px;
 }
 
@@ -241,18 +241,18 @@ main h1 {
     background-color: #f3f2f0;
   }
 }
+
 @media screen and (max-width: 560px) {
   .h_principal_banner img {
     height: 250px;
     width: 100%;
   }
 }
+
 @media screen and (max-width: 400px) {
   .h_principal_banner img {
     height: 200px;
     width: 100%;
   }
 }
-/*# sourceMappingURL=main.css.map */
-
 /*# sourceMappingURL=main.css.map */
